...
              maxLength={30}
              onChangeText={(username) => username$.actions.set(username)}
              testID='LoginUserPrompt'
            />
          </View>
...
              maxLength={50}
              onChangeText={(password) => password$.actions.set(password)}
              testID='LoginPassPrompt'
            />
          </View>
...
            style={styles.loginBtn}
            onPress={() => checkLogin(String(username$.get()), String(password$.get()))}
            testID='LoginButton'
          >
            <Text style={styles.loginText}>LOGIN</Text>
...
            style={styles.loginBtn}
            onPress={() => setScreen(PAGES.MAKEACC)}
            testID='RegisterButton'
          >
            <Text style={styles.loginText}>REGISTER</Text>
...
              maxLength={30}
              onChangeText={(newusername) => newUsername$.actions.set(newusername)}
              testID='RegisterUserPrompt'
            />
          </View>
...
              maxLength={50}
              onChangeText={(newpassword) => newPassword$.actions.set(newpassword)}
              testID='RegisterPassPrompt'
            />
          </View>
...
              maxLength={30}
              onChangeText={(newdispname) => newDispname$.actions.set(newdispname)}
              testID='RegisterNamePrompt'
            />
          </View>
...
              maxLength={240}
              onChangeText={(biography) => newBiography$.actions.set(biography)}
              testID='RegisterBioPrompt'
            />
          </View>
...
            style={styles.loginBtn}
            onPress={() => makeAcc(String(newUsername$.get()), String(newPassword$.get()), String(newDispname$.get()), String(newBiography$.get()))}
            testID='MakeAccButton'
          >
            <Text style={styles.loginText}>CREATE ACCOUNT</Text>
...
            style={styles.loginBtn}
            onPress={() => setScreen(PAGES.LOGIN)}
            testID='CancelButton'
          >
            <Text style={styles.loginText}>CANCEL</Text>
...
              maxLength={240}
              onChangeText={(post) => postText$.actions.set(post)}
              testID='MakePostTextField'
            />
          </View>
...
              () => { savePost(String(postText$.get())) }
            }
            testID='MakePostSubmitButton'
          >
            <Text style={styles.buttonText}> Submit </Text>
...
              style={styles.backBtnLoc}
              onPress={() => { setScreen(PAGES.ACCOUNTPAGE) }}
              testID='SettingsBackButton'
            >
              <Image source={backBtn} style={styles.backBtn} />
...
                setScreen(PAGES.VIEW_LOCAL_DATA)
              }}
              testID='SettingsViewPostsButton'
            >
              <Text style={styles.loginText}>View My Posts</Text>
...
                setScreen(PAGES.CHANGEACCOUNT_DISP)
              }}
              testID='SettingsChangeDisplayButton'
            >
              <Text style={styles.loginText}>Change Display Name</Text>
...
                setScreen(PAGES.CHANGEACCOUNT_PASS)
              }}
              testID='SettingsChangePassButton'
            >
              <Text style={styles.loginText}>Change Password</Text>
...
                setScreen(PAGES.CHANGEACCOUNT_BIO)
              }}
              testID='SettingsChangeBioButton'
            >
              <Text style={styles.loginText}>Change Bio</Text>
...
              style={styles.loginBtn}
              onPress={() => deleteCurrUser()}
              testID='SettingsDeleteAccButton'
            >
              <Text style={styles.loginText}>Delete This Account</Text>
...
              maxLength={50}
              onChangeText={(newpassword) => newPassword$.actions.set(newpassword)}
              testID='ChangePassTextField'
            />
          </View>
...
              setScreen(PAGES.SETTINGS)
            }}
            testID="ChangePassSubmitButton"
          >
            <Text style={styles.loginText}>Change Password</Text>
...
            style={styles.backBtnLoc}
            onPress={() => { setScreen(PAGES.ACCOUNTPAGE) }}
            testID='NotificationsBackButton'
          >
            <Image source={backBtn} style={styles.backBtn} />
...
            style={styles.userButtonSelected}
            onPress={() => { setScreen(PAGES.ACCOUNTPAGE) }}
            testID="bottomAccountButton"
          />
          <TouchableOpacity style={styles.userButtonSelected}>
...
            style={styles.networkButton}
            onPress={() => { setScreen(PAGES.VIEWPOSTS) }}
            testID="bottomNetworkButton"
          >
            <Image source={networking} style={styles.bottomButtonIcon} />
...
            style={styles.friendButton}
            onPress={() => { setScreen(PAGES.FRIENDSLIST) }}
            testID="bottomFriendsButton"
          >
            <Image source={friends} style={styles.bottomButtonIcon} />
...
            style={styles.postButton}
            onPress={() => { setScreen(PAGES.MAKEPOST) }}
            testID="bottomPostButton"
          >
            <Image source={plussign} style={styles.bottomButtonIcon} />
...
