...
    if(this.state.loading) {
      return <ActivityIndicator size="large" color="#0000ff" />
    }
    return (
      <View style={styles.container}>
        <Text style={styles.bigText}>Welcome back, {this.state.userRealName}</Text>
        <Text style={styles.text} testID='AccountMiD'>{this.state.userMiD}</Text>
        <View style={{width: '100%', justifyContent: 'center', alignContent: 'center', alignItems: 'center'}}>
          <Text style={styles.NotifCountLoc}>{this.state.notifs}</Text>
          <TouchableOpacity
            style={styles.loginBtn}
            onPress={() => {
              setScreen(PAGES.NOTIFICATIONS)
            }}
            testID='NotificationsButton'
          >
            <Text style={styles.loginText}>Notifications</Text>
          </TouchableOpacity>
        </View>
        <TouchableOpacity
          style={styles.loginBtn}
          onPress={() => {
            setScreen(PAGES.SETTINGS)
          }}
          testID='SettingsButton'
        >
          <Text style={styles.loginText}>Settings</Text>
        </TouchableOpacity>

        <TouchableOpacity
          style={styles.loginBtn}
          onPress={() => {
            removeValue('lastRememberedUser')
            setUser(null)
            setScreen(PAGES.LOGIN)
          }}
          testID='LogoutButton'
        >
          <Text style={styles.loginText}>Log Out</Text>
        </TouchableOpacity>
      </View>
    )
  }
...
