...
            <View style={{marginBottom: '2%'}}>
            <SearchBar
                placeholder="Enter an MiD to add a friend!"
                color='#000000'
                lightTheme
                round
                testID='FriendSearchBar'
                onChangeText={text => this.searchFilterFunction(text)}
                value={this.state.value}
            />

            </View>
        );
...
        );
        }
    }

    async itemTapped(item) {
        //alert('Item pressed! ' + item);
        if(item.getDisplayName().includes("Add Friend")) {
            console.log(item.getDisplayName().substring(11,27));
            const newFriendID = item.getDisplayName().substring(11,27);
            Alert.alert(
                "Add Friend?",
                "Are you sure you want to add " + newFriendID + "?",
                [
                  {
                    text: "Cancel",
                    onPress: () => this.searchFilterFunction(""),//console.log("Cancel Pressed"),
                    style: "cancel"
                  },
                  { text: "OK", onPress: () =>  {getUser().addPeer(newFriendID);this.searchFilterFunction("");this.fetchMiDs();}}
                ]
              );
        } else if(item.getDisplayName().includes("(Pending)")) {
            class dummyUserClass {
                constructor(fakeID, fakeName, fakeBio) {
                    this.fakeID = fakeID;
...
