...
        );
    };

    render() {
        if(true) {
            return (
                <View style={{marginTop: 0}} testID='PostScreenComponent'>
                    <View style={{ marginTop: 0, height: 40, width: '45%', elevation: 2, position: 'absolute', borderRadius: 4, backgroundColor:'#181D27', alignSelf: 'flex-end'}}>
                        <Picker
                            selectedValue={this.state.sortingMode}
                            style={styles.PickerStyle}
                            mode='dropdown'
                            onValueChange={(itemValue, itemIndex) => {this.setState({sortingMode: itemValue});this.refresh()}}
...
                        />
                        }
                        data={this.state.data}
                        renderItem={post => renderPost(post)}
                        ItemSeparatorComponent={this.renderSeparator}
                        keyExtractor={item => JSON.stringify(item)}
                        testID='PostFlatlist'
                        />
                    </View>
            );
        } else {
            return (
                <View style={{marginTop: 0}} testID='PostScreenComponent'>
...
